# CosmicRayDetector

./: CMakeLists.txt  README.md
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PMTHit.hh  PMTSD.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  ScintiHit.hh  ScintiSD.hh  TrackingAction.hh
macros/: batch.mac  cosmic_run.mac  init_vis.mac  multi_run.mac  plot_results.C  run.mac  vis.mac
src/: ActionInitialization.cc  CosmicRayDetector.cc  DetectorConstruction.cc  EventAction.cc  PMTHit.cc  PMTSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  ScintiHit.cc  ScintiSD.cc  TrackingAction.cc
